k8s/production/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-portal-front
  namespace: ${KUBERNETES_NAMESPACE}
  labels:
    k8s-app: bank-portal-front
    git-branch: ${GIT_BRANCH}
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: bank-portal-front
      git-branch: ${GIT_BRANCH}
  template:
    metadata:
      labels:
        k8s-app: bank-portal-front
        git-branch: ${GIT_BRANCH}
        force-deploy: ${RANDOM}
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: frontend
        image: ${DOCKER_IMAGE}
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "32Mi"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 80
---
