k8s/production/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bank-portal-front
  namespace: ${KUBERNETES_NAMESPACE}
  labels:
    k8s-app: bank-portal-front
    git-branch: ${GIT_BRANCH}
spec:
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - backend:
          serviceName: bank-portal-front
          servicePort: http
        path: /
---
